--- a/Sales.API/appsettings.json
+++ b/Sales.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+
+  "ConnectionStrings": {
+
+    "DockerConnection": "Data Source=DESKTOP-IUSQE53;User ID=sa;Password=123;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
