Versión03.Controladores de la API para habilitar su consumo.

--- a/Sales.API/appsettings.json
+++ b/Sales.API/appsettings.json
@@ -2,7 +2,7 @@
 
   "ConnectionStrings": {
 
-    "DockerConnection": "Data Source=Luis\\LENOVO;Initial Catalog= Sales;User ID=sa;Password=123;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DockerConnection": "Data Source=Luis\\LUIS;Initial Catalog= Sales;User ID=sa;Password=123;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
 
 
